unpackaged/main/default/objects/ucinn_ascendv2__Currency_Dated_Exchange_Rate__c/ucinn_ascendv2__Currency_Dated_Exchange_Rate__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Currency Dated Exchange Rate</label>
</CustomObject>