unpackaged/main/default/objects/ucinn_ascendv2__Currency_Dated_Exchange_Rate__c/fields/ucinn_ascendv2__Exchange_Date__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Exchange_Date__c</fullName>
    <label>Exchange Date</label>
    <type>Date</type>
</CustomField>