unpackaged/main/default/objects/ucinn_ascendv2__Currency_Dated_Exchange_Rate__c/fields/ucinn_ascendv2__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Exchange_Rate__c</fullName>
    <description>Base = Exchange Rate * Target</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>