unpackaged/main/default/objects/ucinn_ascendv2__Currency_Dated_Exchange_Rate__c/fields/ucinn_ascendv2__Target_Currency__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Currency__c</fullName>
    <label>Target Currency</label>
    <length>7</length>
    <type>Text</type>
</CustomField>